--- a/package.json
+++ b/package.json
@@ -20,7 +20,20 @@
     "react-helmet": "^6.1.0"
   },
   "devDependencies": {
-    "prettier": "2.2.1"
+    "@babel/core": "^7.14.6",
+    "@storybook/addon-actions": "^6.2.9",
+    "@storybook/addon-essentials": "^6.2.9",
+    "@storybook/addon-links": "^6.2.9",
+    "@storybook/react": "^6.2.9",
+    "babel-jest": "^27.0.2",
+    "babel-loader": "^8.2.2",
+    "babel-preset-gatsby": "^1.7.1",
+    "cypress": "^7.5.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^27.0.4",
+    "prettier": "2.2.1",
+    "react-test-renderer": "^17.0.2",
+    "start-server-and-test": "^1.12.5"
   },
   "keywords": [
     "gatsby"
@@ -33,7 +46,11 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook",
+    "cy:open": "cypress open",
+    "test:e2e": "start-server-and-test develop http://localhost:8000 cy:open"
   },
   "repository": {
     "type": "git",
