--- a/package.json
+++ b/package.json
@@ -5,35 +5,49 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
-    "gatsby": "^3.6.2",
-    "gatsby-plugin-gatsby-cloud": "^2.6.1",
-    "gatsby-plugin-image": "^1.6.0",
-    "gatsby-plugin-manifest": "^3.6.0",
-    "gatsby-plugin-offline": "^4.6.0",
-    "gatsby-plugin-react-helmet": "^4.6.0",
-    "gatsby-plugin-sharp": "^3.6.0",
-    "gatsby-source-filesystem": "^3.6.0",
-    "gatsby-transformer-sharp": "^3.6.0",
+    "@reach/router": "^1.3.4",
+    "babel-plugin-styled-components": "^1.12.0",
+    "gatsby": "^3.7.2",
+    "gatsby-plugin-gatsby-cloud": "^2.7.1",
+    "gatsby-plugin-google-fonts": "^1.0.1",
+    "gatsby-plugin-image": "^1.7.1",
+    "gatsby-plugin-manifest": "^3.7.1",
+    "gatsby-plugin-offline": "^4.7.1",
+    "gatsby-plugin-react-helmet": "^4.7.1",
+    "gatsby-plugin-sharp": "^3.7.1",
+    "gatsby-plugin-styled-components": "^4.7.1",
+    "gatsby-source-filesystem": "^3.7.1",
+    "gatsby-transformer-sharp": "^3.7.1",
     "prop-types": "^15.7.2",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-helmet": "^6.1.0"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
+    "react-responsive": "^8.2.0",
+    "styled-components": "^5.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
+    "@babel/preset-env": "^7.14.5",
+    "@babel/preset-react": "^7.14.5",
+    "@react-theming/storybook-addon": "^1.1.1",
     "@storybook/addon-actions": "^6.2.9",
+    "@storybook/addon-backgrounds": "^6.2.9",
     "@storybook/addon-essentials": "^6.2.9",
     "@storybook/addon-links": "^6.2.9",
+    "@storybook/addon-storyshots": "^6.2.9",
     "@storybook/react": "^6.2.9",
     "babel-jest": "^27.0.2",
     "babel-loader": "^8.2.2",
     "babel-preset-gatsby": "^1.7.1",
+    "chromatic": "^5.9.2",
     "cypress": "^7.5.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.0.4",
-    "prettier": "2.2.1",
+    "prettier": "2.3.1",
     "react-test-renderer": "^17.0.2",
-    "start-server-and-test": "^1.12.5"
+    "start-server-and-test": "^1.12.5",
+    "storybook-addon-styled-component-theme": "^2.0.0",
+    "ts-jest": "^27.0.3"
   },
   "keywords": [
     "gatsby"
@@ -46,7 +60,7 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
+    "test": "jest",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "cy:open": "cypress open",
